--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,7 +17,6 @@ services:
         PHP5_VERSION: ${PHP5_VERSION}
         PHP5_PATH_ROOT: ${PHP5_PATH_ROOT}
         PHP5_VH_NAME: ${PHP5_VH_NAME}
-        PHP5_PORT_SSH: ${PHP5_PORT_SSH}
         PHP5_PORT_FPM: ${PHP5_PORT_FPM}
         PHP5_KEY_XDEBUG: ${PHP5_KEY_XDEBUG}
         PHP5_HOST_XDEBUG: ${PHP5_HOST_XDEBUG}
@@ -34,13 +33,13 @@ services:
       PHP5_VERSION: ${PHP5_VERSION}
       PHP5_PATH_ROOT: ${PHP5_PATH_ROOT}
       PHP5_VH_NAME: ${PHP5_VH_NAME}
-      PHP5_PORT_SSH: ${PHP5_PORT_SSH}
       PHP5_PORT_FPM: ${PHP5_PORT_FPM}
       PHP5_KEY_XDEBUG: ${PHP5_KEY_XDEBUG}
       PHP5_HOST_XDEBUG: ${PHP5_HOST_XDEBUG}
       PHP5_PORT_XDEBUG: ${PHP5_PORT_XDEBUG}
     ports:
-      - 127.0.0.1:${PHP5_PORT_SSH}:22
+      - 127.0.0.1:${PHP5_PORT_FPM}:${PHP5_PORT_FPM}
+      - 127.0.0.1:${PHP5_PORT_XDEBUG}:${PHP5_PORT_XDEBUG}
     volumes:
       - ${PATH_ROOT}:/home/${WWW_USER_NAME}/root
     networks:
@@ -67,7 +66,6 @@ services:
         PHP7_VERSION: ${PHP7_VERSION}
         PHP7_PATH_ROOT: ${PHP7_PATH_ROOT}
         PHP7_VH_NAME: ${PHP7_VH_NAME}
-        PHP7_PORT_SSH: ${PHP7_PORT_SSH}
         PHP7_PORT_FPM: ${PHP7_PORT_FPM}
         PHP7_KEY_XDEBUG: ${PHP7_KEY_XDEBUG}
         PHP7_HOST_XDEBUG: ${PHP7_HOST_XDEBUG}
@@ -84,13 +82,13 @@ services:
       PHP7_VERSION: ${PHP7_VERSION}
       PHP7_PATH_ROOT: ${PHP7_PATH_ROOT}
       PHP7_VH_NAME: ${PHP7_VH_NAME}
-      PHP7_PORT_SSH: ${PHP7_PORT_SSH}
       PHP7_PORT_FPM: ${PHP7_PORT_FPM}
       PHP7_KEY_XDEBUG: ${PHP7_KEY_XDEBUG}
       PHP7_HOST_XDEBUG: ${PHP7_HOST_XDEBUG}
       PHP7_PORT_XDEBUG: ${PHP7_PORT_XDEBUG}
     ports:
-      - 127.0.0.1:${PHP7_PORT_SSH}:22
+      - 127.0.0.1:${PHP7_PORT_FPM}:${PHP7_PORT_FPM}
+      - 127.0.0.1:${PHP7_PORT_XDEBUG}:${PHP7_PORT_XDEBUG}
     volumes:
       - ${PATH_ROOT}:/home/${WWW_USER_NAME}/root
     networks:
@@ -148,8 +146,8 @@ services:
       NODEJS_PORT_HTTP: ${NODEJS_PORT_HTTP}
       NODEJS_PORT_HTTPS: ${NODEJS_PORT_HTTPS}
     ports:
-      - 127.0.0.1:${APACHE_PORT_HTTP}:80
-      - 127.0.0.1:${APACHE_PORT_HTTPS}:443
+      - ${APACHE_PORT_HTTP}:80
+      - ${APACHE_PORT_HTTPS}:443
     volumes:
       - ${PATH_ROOT}:/home/${WWW_USER_NAME}/root
       - ${PATH_ROOT}:${APACHE_PATH_ROOT}/htdocs
