Fix work in progress...

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -173,6 +173,7 @@ services:
         MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
         MYSQL_USER: ${MYSQL_USER}
         MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+        MYSQL56_VERSION: ${MYSQL56_VERSION}
         MYSQL56_PORT: ${MYSQL56_PORT}
     environment:
       WWW_USER_NAME: ${WWW_USER_NAME}
@@ -184,6 +185,7 @@ services:
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
       MYSQL_USER: ${MYSQL_USER}
       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+      MYSQL56_VERSION: ${MYSQL56_VERSION}
       MYSQL56_PORT: ${MYSQL56_PORT}
     ports:
       - 127.0.0.1:${MYSQL56_PORT}:3306
@@ -212,6 +214,7 @@ services:
         MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
         MYSQL_USER: ${MYSQL_USER}
         MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+        MYSQL57_VERSION: ${MYSQL57_VERSION}
         MYSQL57_PORT: ${MYSQL57_PORT}
     environment:
       WWW_USER_NAME: ${WWW_USER_NAME}
@@ -223,6 +226,7 @@ services:
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
       MYSQL_USER: ${MYSQL_USER}
       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+      MYSQL57_VERSION: ${MYSQL57_VERSION}
       MYSQL57_PORT: ${MYSQL57_PORT}
     ports:
       - 127.0.0.1:${MYSQL57_PORT}:3306
@@ -338,6 +342,8 @@ services:
         PATH_ROOT: ${PATH_ROOT}
         TIMEZONE: ${TIMEZONE}
         REDIS_VERSION: ${REDIS_VERSION}
+        REDIS_PASSWORD: ${REDIS_PASSWORD}
+        REDIS_PORT: ${REDIS_PORT}
     environment:
       WWW_USER_NAME: ${WWW_USER_NAME}
       WWW_USER_PASSWORD: ${WWW_USER_PASSWORD}
@@ -346,6 +352,8 @@ services:
       PATH_ROOT: ${PATH_ROOT}
       TIMEZONE: ${TIMEZONE}
       REDIS_VERSION: ${REDIS_VERSION}
+      REDIS_PASSWORD: ${REDIS_PASSWORD}
+      REDIS_PORT: ${REDIS_PORT}
     ports:
       - 127.0.0.1:${REDIS_PORT}:6379
     volumes:
@@ -371,8 +379,8 @@ services:
         PATH_ROOT: ${PATH_ROOT}
         TIMEZONE: ${TIMEZONE}
         MONGODB_VERSION: ${MONGODB_VERSION}
-        MONGODB_USER: ${MONGODB_USER}
-        MONGODB_PASSWORD: ${MONGODB_PASSWORD}
+        MONGO_INITDB_ROOT_USERNAME: ${MONGODB_USER}
+        MONGO_INITDB_ROOT_PASSWORD: ${MONGODB_PASSWORD}
         MONGODB_PORT: ${MONGODB_PORT}
     environment:
       WWW_USER_NAME: ${WWW_USER_NAME}
@@ -382,8 +390,8 @@ services:
       PATH_ROOT: ${PATH_ROOT}
       TIMEZONE: ${TIMEZONE}
       MONGODB_VERSION: ${MONGODB_VERSION}
-      MONGODB_USER: ${MONGODB_USER}
-      MONGODB_PASSWORD: ${MONGODB_PASSWORD}
+      MONGO_INITDB_ROOT_USERNAME: ${MONGODB_USER}
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGODB_PASSWORD}
       MONGODB_PORT: ${MONGODB_PORT}
     ports:
       - 127.0.0.1:${MONGODB_PORT}:27017
