--- a/.env.dist
+++ b/.env.dist
@@ -44,18 +44,20 @@ APACHE_NETWORK_IP=172.21.0.4
 MYSQL_ROOT_PASSWORD=Password1
 MYSQL_USER=user_1
 MYSQL_PASSWORD=Password1
-MYSQL56_DATA_PATH=D:\One_workspace\data\mysql56
+MYSQL56_VERSION=5.6
 MYSQL56_PORT=3306
+MYSQL56_DATA_PATH=D:\One_workspace\data\mysql56
 MYSQL56_NETWORK_IP=172.21.0.5
-MYSQL57_DATA_PATH=D:\One_workspace\data\mysql57
+MYSQL57_VERSION=5.7
 MYSQL57_PORT=3307
+MYSQL57_DATA_PATH=D:\One_workspace\data\mysql57
 MYSQL57_NETWORK_IP=172.21.0.6
 
 POSTGRES_VERSION=10.13
 POSTGRES_USER=root
 POSTGRES_PASSWORD=Password1
-POSTGRES_DATA_PATH=D:\One_workspace\data\postgresql
 POSTGRES_PORT=5432
+POSTGRES_DATA_PATH=D:\One_workspace\data\postgresql
 POSTGRES_NETWORK_IP=172.21.0.7
 
 NODEJS_VERSION=12.18.1
@@ -68,13 +70,14 @@ NODEJS_PORT_VUE_APP=8001
 NODEJS_NETWORK_IP=172.21.0.8
 
 REDIS_VERSION=6.0.9
-REDIS_DATA_PATH=D:\One_workspace\data\redis
+REDIS_PASSWORD=Password1
 REDIS_PORT=6379
+REDIS_DATA_PATH=D:\One_workspace\data\redis
 REDIS_NETWORK_IP=172.21.0.9
 
-MONGODB_VERSION=4.4.1
+MONGODB_VERSION=4.4.2
 MONGODB_USER=root
 MONGODB_PASSWORD=Password1
-MONGODB_DATA_PATH=D:\One_workspace\data\mongodb
 MONGODB_PORT=27017
+MONGODB_DATA_PATH=D:\One_workspace\data\mongodb
 MONGODB_NETWORK_IP=172.21.0.10
