Fix work in progress...

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -379,8 +379,11 @@ services:
         PATH_ROOT: ${PATH_ROOT}
         TIMEZONE: ${TIMEZONE}
         MONGODB_VERSION: ${MONGODB_VERSION}
-        MONGO_INITDB_ROOT_USERNAME: ${MONGODB_USER}
-        MONGO_INITDB_ROOT_PASSWORD: ${MONGODB_PASSWORD}
+        MONGO_INITDB_ROOT_USERNAME: ${MONGODB_ROOT_USER}
+        MONGO_INITDB_ROOT_PASSWORD: ${MONGODB_ROOT_PASSWORD}
+        MONGODB_DATABASE: ${MONGODB_DATABASE}
+        MONGODB_USER: ${MONGODB_USER}
+        MONGODB_PASSWORD: ${MONGODB_PASSWORD}
         MONGODB_PORT: ${MONGODB_PORT}
     environment:
       WWW_USER_NAME: ${WWW_USER_NAME}
@@ -390,8 +393,11 @@ services:
       PATH_ROOT: ${PATH_ROOT}
       TIMEZONE: ${TIMEZONE}
       MONGODB_VERSION: ${MONGODB_VERSION}
-      MONGO_INITDB_ROOT_USERNAME: ${MONGODB_USER}
-      MONGO_INITDB_ROOT_PASSWORD: ${MONGODB_PASSWORD}
+      MONGO_INITDB_ROOT_USERNAME: ${MONGODB_ROOT_USER}
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGODB_ROOT_PASSWORD}
+      MONGODB_DATABASE: ${MONGODB_DATABASE}
+      MONGODB_USER: ${MONGODB_USER}
+      MONGODB_PASSWORD: ${MONGODB_PASSWORD}
       MONGODB_PORT: ${MONGODB_PORT}
     ports:
       - 127.0.0.1:${MONGODB_PORT}:27017
