--- a/.env.dist
+++ b/.env.dist
@@ -76,7 +76,10 @@ REDIS_DATA_PATH=D:\One_workspace\data\redis
 REDIS_NETWORK_IP=172.21.0.9
 
 MONGODB_VERSION=4.4.2
-MONGODB_USER=root
+MONGODB_ROOT_USER=root
+MONGODB_ROOT_PASSWORD=Password1
+MONGODB_DATABASE=user_1
+MONGODB_USER=user_1
 MONGODB_PASSWORD=Password1
 MONGODB_PORT=27017
 MONGODB_DATA_PATH=D:\One_workspace\data\mongodb
