--- a/ow_system/package.json
+++ b/ow_system/package.json
@@ -8,19 +8,21 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.8.2",
-    "socket.io-client": "^3.0.4",
+    "core-js": "^3.8.3",
+    "socket.io-client": "^3.1.0",
     "vue": "^2.6.12",
-    "xterm": "^4.9.0",
+    "xterm": "^4.10.0",
     "xterm-addon-fit": "^0.4.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.5.9",
-    "@vue/cli-plugin-eslint": "^4.5.9",
-    "@vue/cli-service": "^4.5.9",
+    "@vue/cli-plugin-babel": "^4.5.11",
+    "@vue/cli-plugin-eslint": "^4.5.11",
+    "@vue/cli-service": "^4.5.11",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "sass": "^1.32.6",
+    "sass-loader": "^10.1.1",
     "vue-template-compiler": "^2.6.12"
   },
   "eslintConfig": {
