--- a/system/package.json
+++ b/system/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.8.3",
     "socket.io-client": "^3.1.1",
     "vue": "^2.6.12",
+    "vue-router": "^3.5.1",
     "xterm": "^4.10.0",
     "xterm-addon-fit": "^0.5.0"
   },
