--- a/.env.dist
+++ b/.env.dist
@@ -66,7 +66,8 @@ NODEJS_DIGEST_ENABLE=false
 NODEJS_PORT_HTTP=1080
 NODEJS_PORT_HTTPS=1443
 NODEJS_PORT_VUE=8000
-NODEJS_PORT_VUE_APP=8001
+NODEJS_PORT_VUE_APP=8001-8009
+NODEJS_DATA_PATH=D:\One_workspace\data\nodejs
 NODEJS_NETWORK_IP=172.21.0.8
 
 REDIS_VERSION=6.0.9
