--- a/virtual_host/localhost_html.conf
+++ b/virtual_host/localhost_html.conf
@@ -1,7 +1,7 @@
 <VirtualHost *:80>
-    ServerAdmin ${WWW_USER_NAME}@localhost_html
-    ServerName localhost_html
-    ServerAlias localhost_html
+    ServerAdmin ${WWW_USER_NAME}@localhost-html
+    ServerName localhost-html
+    ServerAlias localhost-html
 
     DocumentRoot /home/${WWW_USER_NAME}/root${WEB_PATH}
     DirectoryIndex index.html
@@ -66,9 +66,9 @@
 </VirtualHost>
 
 <VirtualHost *:443>
-    ServerAdmin ${WWW_USER_NAME}@localhost_html
-    ServerName localhost_html
-    ServerAlias localhost_html
+    ServerAdmin ${WWW_USER_NAME}@localhost-html
+    ServerName localhost-html
+    ServerAlias localhost-html
 
     DocumentRoot /home/${WWW_USER_NAME}/root${WEB_PATH}
     DirectoryIndex index.html
