--- a/docker/Dockerfile_apache
+++ b/docker/Dockerfile_apache
@@ -31,6 +31,8 @@ COPY ${PATH_ROOT}/apache.conf ${APACHE_PATH_ROOT}/conf/httpd.conf
 RUN cd ~ \
 && apt-get update && apt-get install -y \
 software-properties-common \
+apt-transport-https \
+lsb-release \
 sudo \
 nano \
 tzdata \
