--- a/.env.dist
+++ b/.env.dist
@@ -60,7 +60,9 @@ POSTGRES_NETWORK_IP=172.21.0.7
 
 NODEJS_VERSION=12.18.1
 NODEJS_ENV=development
-NODEJS_DIGEST_ENABLE=false
+NODEJS_DOMAIN=localhost
+NODEJS_IP=0.0.0.0
+NODEJS_DIGEST_ENABLED=false
 NODEJS_PORT_HTTP=1080
 NODEJS_PORT_HTTPS=1443
 NODEJS_PORT_VUE=8000
