--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -287,7 +287,9 @@ services:
         CERTIFICATE_CHAIN: ${CERTIFICATE_CHAIN}
         NODEJS_VERSION: ${NODEJS_VERSION}
         NODEJS_ENV: ${NODEJS_ENV}
-        NODEJS_DIGEST_ENABLE: ${NODEJS_DIGEST_ENABLE}
+        NODEJS_DOMAIN: ${NODEJS_DOMAIN}
+        NODEJS_IP: ${NODEJS_IP}
+        NODEJS_DIGEST_ENABLED: ${NODEJS_DIGEST_ENABLED}
         NODEJS_PORT_HTTP: ${NODEJS_PORT_HTTP}
         NODEJS_PORT_HTTPS: ${NODEJS_PORT_HTTPS}
         NODEJS_PORT_VUE: ${NODEJS_PORT_VUE}
@@ -303,7 +305,9 @@ services:
       CERTIFICATE_CHAIN: ${CERTIFICATE_CHAIN}
       NODEJS_VERSION: ${NODEJS_VERSION}
       NODEJS_ENV: ${NODEJS_ENV}
-      NODEJS_DIGEST_ENABLE: ${NODEJS_DIGEST_ENABLE}
+      NODEJS_DOMAIN: ${NODEJS_DOMAIN}
+      NODEJS_IP: ${NODEJS_IP}
+      NODEJS_DIGEST_ENABLED: ${NODEJS_DIGEST_ENABLED}
       NODEJS_PORT_HTTP: ${NODEJS_PORT_HTTP}
       NODEJS_PORT_HTTPS: ${NODEJS_PORT_HTTPS}
       NODEJS_PORT_VUE: ${NODEJS_PORT_VUE}
