--- a/docker/Dockerfile_nodejs
+++ b/docker/Dockerfile_nodejs
@@ -11,7 +11,9 @@ ARG CERTIFICATE_FILE
 ARG CERTIFICATE_KEY
 ARG CERTIFICATE_CHAIN
 ARG NODEJS_ENV
-ARG NODEJS_DIGEST_ENABLE
+ARG NODEJS_DOMAIN
+ARG NODEJS_IP
+ARG NODEJS_DIGEST_ENABLED
 ARG NODEJS_PORT_HTTP
 ARG NODEJS_PORT_HTTPS
 ARG NODEJS_PORT_VUE
@@ -45,9 +47,7 @@ wget \
 && ln -sf /usr/share/zoneinfo/${TIMEZONE} /etc/localtime \
 && dpkg-reconfigure -f noninteractive tzdata \
 # Npm
-&& npm install -g @vue/cli \
-&& npm install -g terser \
-&& npm install -g sass \
+&& npm install -g @vue/cli terser sass \
 # Docker
 && curl -fsSL https://download.docker.com/linux/debian/gpg | apt-key add - \
 && add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/debian $(lsb_release -cs) stable" \
