--- a/system/package.json
+++ b/system/package.json
@@ -10,13 +10,13 @@
     },
     "dependencies": {
         "core-js": "^3.9.1",
-        "socket.io-client": "^3.1.2",
+        "socket.io-client": "4.0.0",
         "vue": "^2.6.11",
         "vue-class-component": "^7.2.3",
         "vue-property-decorator": "^9.1.2",
         "vue-router": "^3.2.0",
-        "xterm": "^4.10.0",
-        "xterm-addon-fit": "^0.5.0"
+        "xterm": "4.11.0",
+        "xterm-addon-fit": "0.5.0"
     },
     "devDependencies": {
         "@types/jest": "^24.0.19",
