--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -289,11 +289,13 @@ services:
         NODEJS_ENV: ${NODEJS_ENV}
         NODEJS_DOMAIN: ${NODEJS_DOMAIN}
         NODEJS_IP: ${NODEJS_IP}
-        NODEJS_DIGEST_ENABLED: ${NODEJS_DIGEST_ENABLED}
+        NODEJS_DEBUG: ${NODEJS_DEBUG}
+        NODEJS_DIGEST: ${NODEJS_DIGEST}
+        NODEJS_CRYPT_KEY: ${NODEJS_CRYPT_KEY}
         NODEJS_PORT_HTTP: ${NODEJS_PORT_HTTP}
         NODEJS_PORT_HTTPS: ${NODEJS_PORT_HTTPS}
         NODEJS_PORT_VUE: ${NODEJS_PORT_VUE}
-        NODEJS_PORT_VUE_APP: ${NODEJS_PORT_VUE_APP}
+        NODEJS_PORT_RANGE: ${NODEJS_PORT_RANGE}
     environment:
       WWW_USER_NAME: ${WWW_USER_NAME}
       WWW_USER_PASSWORD: ${WWW_USER_PASSWORD}
@@ -307,16 +309,18 @@ services:
       NODEJS_ENV: ${NODEJS_ENV}
       NODEJS_DOMAIN: ${NODEJS_DOMAIN}
       NODEJS_IP: ${NODEJS_IP}
-      NODEJS_DIGEST_ENABLED: ${NODEJS_DIGEST_ENABLED}
+      NODEJS_DEBUG: ${NODEJS_DEBUG}
+      NODEJS_DIGEST: ${NODEJS_DIGEST}
+      NODEJS_CRYPT_KEY: ${NODEJS_CRYPT_KEY}
       NODEJS_PORT_HTTP: ${NODEJS_PORT_HTTP}
       NODEJS_PORT_HTTPS: ${NODEJS_PORT_HTTPS}
       NODEJS_PORT_VUE: ${NODEJS_PORT_VUE}
-      NODEJS_PORT_VUE_APP: ${NODEJS_PORT_VUE_APP}
+      NODEJS_PORT_RANGE: ${NODEJS_PORT_RANGE}
     ports:
       - 127.0.0.1:${NODEJS_PORT_HTTP}:${NODEJS_PORT_HTTP}
       - 127.0.0.1:${NODEJS_PORT_HTTPS}:${NODEJS_PORT_HTTPS}
       - 127.0.0.1:${NODEJS_PORT_VUE}:${NODEJS_PORT_VUE}
-      - 127.0.0.1:${NODEJS_PORT_VUE_APP}:${NODEJS_PORT_VUE_APP}
+      - 127.0.0.1:${NODEJS_PORT_RANGE}:${NODEJS_PORT_RANGE}
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ${PATH_ROOT}:/home/${WWW_USER_NAME}/root
