--- a/docker/Dockerfile_nodejs
+++ b/docker/Dockerfile_nodejs
@@ -13,11 +13,13 @@ ARG CERTIFICATE_CHAIN
 ARG NODEJS_ENV
 ARG NODEJS_DOMAIN
 ARG NODEJS_IP
-ARG NODEJS_DIGEST_ENABLED
+ARG NODEJS_DEBUG
+ARG NODEJS_DIGEST
+ARG NODEJS_CRYPT_KEY
 ARG NODEJS_PORT_HTTP
 ARG NODEJS_PORT_HTTPS
 ARG NODEJS_PORT_VUE
-ARG NODEJS_PORT_VUE_APP
+ARG NODEJS_PORT_RANGE
 
 ENV NODE_ENV=${NODEJS_ENV}
 ENV DEBIAN_FRONTEND=noninteractive
@@ -60,4 +62,4 @@ wget \
 
 ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
 
-EXPOSE ${NODEJS_PORT_HTTP} ${NODEJS_PORT_HTTPS} ${NODEJS_PORT_VUE} ${NODEJS_PORT_VUE_APP}
+EXPOSE ${NODEJS_PORT_HTTP} ${NODEJS_PORT_HTTPS} ${NODEJS_PORT_VUE} ${NODEJS_PORT_RANGE}
