--- a/.env.dist
+++ b/.env.dist
@@ -62,11 +62,13 @@ NODEJS_VERSION=12.18.1
 NODEJS_ENV=development
 NODEJS_DOMAIN=localhost
 NODEJS_IP=0.0.0.0
-NODEJS_DIGEST_ENABLED=false
+NODEJS_DEBUG=off
+NODEJS_DIGEST=off
+NODEJS_CRYPT_KEY=abcd1234
 NODEJS_PORT_HTTP=1080
 NODEJS_PORT_HTTPS=1443
 NODEJS_PORT_VUE=8000
-NODEJS_PORT_VUE_APP=8001-8009
+NODEJS_PORT_RANGE=8001-8010
 NODEJS_DATA_PATH=D:\One_workspace\data\nodejs
 NODEJS_NETWORK_IP=172.21.0.8
 
