--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -289,6 +289,7 @@ services:
         NODEJS_ENV: ${NODEJS_ENV}
         NODEJS_DOMAIN: ${NODEJS_DOMAIN}
         NODEJS_IP: ${NODEJS_IP}
+        NODEJS_PATH_STATIC: ${NODEJS_PATH_STATIC}
         NODEJS_DEBUG: ${NODEJS_DEBUG}
         NODEJS_DIGEST: ${NODEJS_DIGEST}
         NODEJS_CRYPT_KEY: ${NODEJS_CRYPT_KEY}
@@ -309,6 +310,7 @@ services:
       NODEJS_ENV: ${NODEJS_ENV}
       NODEJS_DOMAIN: ${NODEJS_DOMAIN}
       NODEJS_IP: ${NODEJS_IP}
+      NODEJS_PATH_STATIC: ${NODEJS_PATH_STATIC}
       NODEJS_DEBUG: ${NODEJS_DEBUG}
       NODEJS_DIGEST: ${NODEJS_DIGEST}
       NODEJS_CRYPT_KEY: ${NODEJS_CRYPT_KEY}
