Add new container and update version.

--- a/.env.dist
+++ b/.env.dist
@@ -15,53 +15,11 @@ DOMAIN=localhost
 NETWORK_DRIVER=bridge
 NETWORK_SUB=172.21.0.0/16
 
-PHP5_VERSION=5.6
-PHP5_PATH_ROOT=/usr/local/etc
-PHP5_VH_NAME=localhost-php5
-PHP5_PORT_FPM=9001
-PHP5_KEY_XDEBUG=docker
-PHP5_HOST_XDEBUG=host.docker.internal
-PHP5_PORT_XDEBUG=9991
-PHP5_NETWORK_IP=172.21.0.2
-
-PHP7_VERSION=7.4
-PHP7_PATH_ROOT=/usr/local/etc
-PHP7_VH_NAME=localhost-php7
-PHP7_PORT_FPM=9002
-PHP7_KEY_XDEBUG=docker
-PHP7_HOST_XDEBUG=host.docker.internal
-PHP7_PORT_XDEBUG=9992
-PHP7_NETWORK_IP=172.21.0.3
-
-APACHE_VERSION=2.4
-APACHE_PATH_ROOT=/usr/local/apache2
-APACHE_PORT_HTTP=80
-APACHE_PORT_HTTPS=443
-APACHE_NETWORK_IP=172.21.0.4
-
-MYSQL_ROOT_PASSWORD=Password1
-MYSQL_USER=user_1
-MYSQL_PASSWORD=Password1
-MYSQL56_VERSION=5.6
-MYSQL56_PORT=3306
-MYSQL56_DATA_PATH=D:\One_workspace\data\mysql56
-MYSQL56_NETWORK_IP=172.21.0.5
-MYSQL57_VERSION=5.7
-MYSQL57_PORT=3307
-MYSQL57_DATA_PATH=D:\One_workspace\data\mysql57
-MYSQL57_NETWORK_IP=172.21.0.6
-
-POSTGRES_VERSION=10.13
-POSTGRES_USER=root
-POSTGRES_PASSWORD=Password1
-POSTGRES_PORT=5432
-POSTGRES_DATA_PATH=D:\One_workspace\data\postgresql
-POSTGRES_NETWORK_IP=172.21.0.7
-
-NODEJS_VERSION=12.18.1
+NODEJS_VERSION=14.16.0
 NODEJS_ENV=development
 NODEJS_DOMAIN=localhost
 NODEJS_IP=0.0.0.0
+NODEJS_PATH_STATIC=/core
 NODEJS_DEBUG=off
 NODEJS_DIGEST=off
 NODEJS_CRYPT_KEY=abcd1234
@@ -70,15 +28,45 @@ NODEJS_PORT_HTTPS=1443
 NODEJS_PORT_VUE=8000
 NODEJS_PORT_RANGE=8001-8010
 NODEJS_DATA_PATH=D:\One_workspace\data\nodejs
-NODEJS_NETWORK_IP=172.21.0.8
+NODEJS_NETWORK_IP=172.21.0.2
 
-REDIS_VERSION=6.0.9
+APACHE_VERSION=2.4.46
+APACHE_PATH_ROOT=/usr/local/apache2
+APACHE_PORT_HTTP=80
+APACHE_PORT_HTTPS=443
+APACHE_NETWORK_IP=172.21.0.3
+
+PHP_VERSION=7.4.16-fpm
+PHP_PATH_ROOT=/usr/local/etc
+PHP_VH_NAME=localhost-php
+PHP_PORT_FPM=9001
+PHP_KEY_XDEBUG=docker
+PHP_HOST_XDEBUG=host.docker.internal
+PHP_PORT_XDEBUG=9991
+PHP_NETWORK_IP=172.21.0.4
+
+MYSQL_VERSION=5.7
+MYSQL_ROOT_PASSWORD=Password1
+MYSQL_USER=user_1
+MYSQL_PASSWORD=Password1
+MYSQL_PORT=3306
+MYSQL_DATA_PATH=D:\One_workspace\data\mysql
+MYSQL_NETWORK_IP=172.21.0.5
+
+POSTGRES_VERSION=10.16
+POSTGRES_USER=root
+POSTGRES_PASSWORD=Password1
+POSTGRES_PORT=5432
+POSTGRES_DATA_PATH=D:\One_workspace\data\postgresql
+POSTGRES_NETWORK_IP=172.21.0.6
+
+REDIS_VERSION=6.2.1
 REDIS_PASSWORD=Password1
 REDIS_PORT=6379
 REDIS_DATA_PATH=D:\One_workspace\data\redis
-REDIS_NETWORK_IP=172.21.0.9
+REDIS_NETWORK_IP=172.21.0.7
 
-MONGODB_VERSION=4.4.2
+MONGODB_VERSION=4.4.4
 MONGODB_ROOT_USER=root
 MONGODB_ROOT_PASSWORD=Password1
 MONGODB_DATABASE=user_1
@@ -86,4 +74,8 @@ MONGODB_USER=user_1
 MONGODB_PASSWORD=Password1
 MONGODB_PORT=27017
 MONGODB_DATA_PATH=D:\One_workspace\data\mongodb
-MONGODB_NETWORK_IP=172.21.0.10
+MONGODB_NETWORK_IP=172.21.0.8
+
+PYTHON_VERSION=3.9.4
+PYTHON_PORT=7000
+PYTHON_NETWORK_IP=172.21.0.9
