--- a/docker/Dockerfile_apache
+++ b/docker/Dockerfile_apache
@@ -15,10 +15,8 @@ ARG DOMAIN
 ARG APACHE_PATH_ROOT
 ARG APACHE_PORT_HTTP
 ARG APACHE_PORT_HTTPS
-ARG PHP5_VH_NAME
-ARG PHP5_PORT_FPM
-ARG PHP7_VH_NAME
-ARG PHP7_PORT_FPM
+ARG PHP_VH_NAME
+ARG PHP_PORT_FPM
 ARG NODEJS_PORT_HTTP
 ARG NODEJS_PORT_HTTPS
 
