--- a/docker/Dockerfile_mysql
+++ b/docker/Dockerfile_mysql
@@ -1,7 +1,9 @@
-ARG MYSQL56_VERSION
+ARG MYSQL_VERSION
 
-FROM mysql:${MYSQL56_VERSION}
+FROM mysql:${MYSQL_VERSION}
 
+ARG WWW_USER_NAME
+ARG WWW_USER_PASSWORD
 ARG WEB_USER_GROUP
 ARG WEB_PATH
 ARG PATH_ROOT
@@ -9,7 +11,7 @@ ARG TIMEZONE
 ARG MYSQL_ROOT_PASSWORD
 ARG MYSQL_USER
 ARG MYSQL_PASSWORD
-ARG MYSQL56_PORT
+ARG MYSQL_PORT
 
 ENV DEBIAN_FRONTEND=noninteractive
 ENV DEBCONF_NOWARNINGS=yes
@@ -40,4 +42,4 @@ wget \
 && apt-get autoclean -y \
 && apt-get autoremove -y
 
-EXPOSE ${MYSQL56_PORT}
+EXPOSE ${MYSQL_PORT}
