--- a/docker/php_zz-docker.conf
+++ b/docker/php_zz-docker.conf
@@ -4,7 +4,7 @@ daemonize = no
 [www]
 user = ${WEB_USER_GROUP}
 group = ${WEB_USER_GROUP}
-listen = php5_container:${PHP5_PORT_FPM}
+listen = php_container:${PHP_PORT_FPM}
 pm = dynamic
 pm.max_children = 120
 pm.start_servers = 12
