--- a/virtual_host/localhost_php.conf
+++ b/virtual_host/localhost_php.conf
@@ -1,7 +1,7 @@
 <VirtualHost *:80>
-    ServerAdmin ${WWW_USER_NAME}@${PHP7_VH_NAME}
-    ServerName ${PHP7_VH_NAME}
-    ServerAlias ${PHP7_VH_NAME}
+    ServerAdmin ${WWW_USER_NAME}@${PHP_VH_NAME}
+    ServerName ${PHP_VH_NAME}
+    ServerAlias ${PHP_VH_NAME}
 
     DocumentRoot /home/${WWW_USER_NAME}/root${WEB_PATH}
     DirectoryIndex index.php index.html
@@ -60,7 +60,7 @@
     </FilesMatch>
 
     <FilesMatch \.php$>
-        SetHandler "proxy:fcgi://php7_container:${PHP7_PORT_FPM}"
+        SetHandler "proxy:fcgi://php_container:${PHP_PORT_FPM}"
     </FilesMatch>
 
     # Log
@@ -70,9 +70,9 @@
 </VirtualHost>
 
 <VirtualHost *:443>
-    ServerAdmin ${WWW_USER_NAME}@${PHP7_VH_NAME}
-    ServerName ${PHP7_VH_NAME}
-    ServerAlias ${PHP7_VH_NAME}
+    ServerAdmin ${WWW_USER_NAME}@${PHP_VH_NAME}
+    ServerName ${PHP_VH_NAME}
+    ServerAlias ${PHP_VH_NAME}
 
     DocumentRoot /home/${WWW_USER_NAME}/root${WEB_PATH}
     DirectoryIndex index.php index.html
@@ -139,7 +139,7 @@
     </FilesMatch>
 
     <FilesMatch \.php$>
-        SetHandler "proxy:fcgi://php7_container:${PHP7_PORT_FPM}"
+        SetHandler "proxy:fcgi://php_container:${PHP_PORT_FPM}"
     </FilesMatch>
 
     # Log
