--- a/docker/Dockerfile_python
+++ b/docker/Dockerfile_python
@@ -1,6 +1,6 @@
-ARG MYSQL57_VERSION
+ARG PYTHON_VERSION
 
-FROM mysql:${MYSQL57_VERSION}
+FROM python:${PYTHON_VERSION}
 
 ARG WWW_USER_NAME
 ARG WWW_USER_PASSWORD
@@ -8,18 +8,16 @@ ARG WEB_USER_GROUP
 ARG WEB_PATH
 ARG PATH_ROOT
 ARG TIMEZONE
-ARG MYSQL_ROOT_PASSWORD
-ARG MYSQL_USER
-ARG MYSQL_PASSWORD
-ARG MYSQL57_PORT
+ARG PYTHON_PORT
 
 ENV DEBIAN_FRONTEND=noninteractive
 ENV DEBCONF_NOWARNINGS=yes
 
-COPY ${PATH_ROOT}/mysql_override.cnf /etc/mysql/conf.d/override.cnf
+COPY ${PATH_ROOT}/entrypoint_python.sh /usr/local/bin/entrypoint.sh
 
 # System
 RUN cd ~ \
+&& chmod +x /usr/local/bin/entrypoint.sh \
 && apt-get update && apt-get install -y \
 software-properties-common \
 apt-transport-https \
@@ -36,10 +34,16 @@ wget \
 # Time
 && ln -sf /usr/share/zoneinfo/${TIMEZONE} /etc/localtime \
 && dpkg-reconfigure -f noninteractive tzdata \
+# Pip
+&& curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py \
+&& python get-pip.py \
+&& python pip install django==3.2 \
 # Clean
 && rm -rf /var/lib/apt/lists/* \
 && apt-get clean -y \
 && apt-get autoclean -y \
 && apt-get autoremove -y
 
-EXPOSE ${MYSQL57_PORT}
+ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
+
+EXPOSE ${PYTHON_PORT}
