--- a/system/package.json
+++ b/system/package.json
@@ -9,7 +9,7 @@
         "lint": "vue-cli-service lint"
     },
     "dependencies": {
-        "core-js": "^3.9.1",
+        "core-js": "^3.10.0",
         "socket.io-client": "4.0.0",
         "vue": "^2.6.11",
         "vue-class-component": "^7.2.3",
@@ -22,12 +22,12 @@
         "@types/jest": "^24.0.19",
         "@typescript-eslint/eslint-plugin": "^2.33.0",
         "@typescript-eslint/parser": "^2.33.0",
-        "@vue/cli-plugin-babel": "~4.5.0",
-        "@vue/cli-plugin-eslint": "~4.5.0",
-        "@vue/cli-plugin-router": "~4.5.0",
-        "@vue/cli-plugin-typescript": "~4.5.0",
-        "@vue/cli-plugin-unit-jest": "~4.5.0",
-        "@vue/cli-service": "^4.5.11",
+        "@vue/cli-plugin-babel": "^4.5.12",
+        "@vue/cli-plugin-eslint": "^4.5.12",
+        "@vue/cli-plugin-router": "^4.5.12",
+        "@vue/cli-plugin-typescript": "^4.5.12",
+        "@vue/cli-plugin-unit-jest": "^4.5.12",
+        "@vue/cli-service": "^4.5.12",
         "@vue/eslint-config-prettier": "^6.0.0",
         "@vue/eslint-config-typescript": "^5.0.2",
         "@vue/test-utils": "^1.0.3",
