--- a/docker/Dockerfile_python
+++ b/docker/Dockerfile_python
@@ -37,7 +37,7 @@ wget \
 # Pip
 && curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py \
 && python get-pip.py \
-&& python pip install django==3.2 \
+&& python -m pip install Django==3.2 \
 # Clean
 && rm -rf /var/lib/apt/lists/* \
 && apt-get clean -y \
