--- a/docker/Dockerfile_python
+++ b/docker/Dockerfile_python
@@ -38,6 +38,8 @@ wget \
 && curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py \
 && python get-pip.py \
 && python -m pip install Django==3.2 \
+&& python -m pip install psycopg2 \
+&& python -m pip install mysqlclient \
 # Clean
 && rm -rf /var/lib/apt/lists/* \
 && apt-get clean -y \
