Add package to python container.

--- a/docker/Dockerfile_python
+++ b/docker/Dockerfile_python
@@ -31,6 +31,7 @@ zip \
 unzip \
 cron \
 wget \
+gettext \
 # Time
 && ln -sf /usr/share/zoneinfo/${TIMEZONE} /etc/localtime \
 && dpkg-reconfigure -f noninteractive tzdata \
