--- a/.env.dist
+++ b/.env.dist
@@ -22,7 +22,8 @@ NODEJS_IP=0.0.0.0
 NODEJS_PATH_STATIC=/core
 NODEJS_DEBUG=off
 NODEJS_DIGEST=off
-NODEJS_CRYPT_KEY=abcd1234
+NODEJS_ENCRYPTION_SECRET=abcd1234
+NODEJS_ENCRYPTION_KEY=/home/user_1/root/key/encryption.key
 NODEJS_PORT_HTTP=1080
 NODEJS_PORT_HTTPS=1443
 NODEJS_PORT_VUE=10000
@@ -76,6 +77,6 @@ MONGODB_PORT=27017
 MONGODB_DATA_PATH=D:\One_workspace\data\mongodb
 MONGODB_NETWORK_IP=172.21.0.8
 
-PYTHON_VERSION=3.9.4
+PYTHON_VERSION=3.6.13
 PYTHON_PORT=7000
 PYTHON_NETWORK_IP=172.21.0.9
