--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,7 +21,8 @@ services:
                 NODEJS_PATH_STATIC: ${NODEJS_PATH_STATIC}
                 NODEJS_DEBUG: ${NODEJS_DEBUG}
                 NODEJS_DIGEST: ${NODEJS_DIGEST}
-                NODEJS_CRYPT_KEY: ${NODEJS_CRYPT_KEY}
+                NODEJS_ENCRYPTION_SECRET: ${NODEJS_ENCRYPTION_SECRET}
+                NODEJS_ENCRYPTION_KEY: ${NODEJS_ENCRYPTION_KEY}
                 NODEJS_PORT_HTTP: ${NODEJS_PORT_HTTP}
                 NODEJS_PORT_HTTPS: ${NODEJS_PORT_HTTPS}
                 NODEJS_PORT_VUE: ${NODEJS_PORT_VUE}
@@ -42,7 +43,8 @@ services:
             NODEJS_PATH_STATIC: ${NODEJS_PATH_STATIC}
             NODEJS_DEBUG: ${NODEJS_DEBUG}
             NODEJS_DIGEST: ${NODEJS_DIGEST}
-            NODEJS_CRYPT_KEY: ${NODEJS_CRYPT_KEY}
+            NODEJS_ENCRYPTION_SECRET: ${NODEJS_ENCRYPTION_SECRET}
+            NODEJS_ENCRYPTION_KEY: ${NODEJS_ENCRYPTION_KEY}
             NODEJS_PORT_HTTP: ${NODEJS_PORT_HTTP}
             NODEJS_PORT_HTTPS: ${NODEJS_PORT_HTTPS}
             NODEJS_PORT_VUE: ${NODEJS_PORT_VUE}
