--- a/docker/Dockerfile_nodejs
+++ b/docker/Dockerfile_nodejs
@@ -16,7 +16,8 @@ ARG NODEJS_IP
 ARG NODEJS_PATH_STATIC
 ARG NODEJS_DEBUG
 ARG NODEJS_DIGEST
-ARG NODEJS_CRYPT_KEY
+ARG NODEJS_ENCRYPTION_SECRET
+ARG NODEJS_ENCRYPTION_KEY
 ARG NODEJS_PORT_HTTP
 ARG NODEJS_PORT_HTTPS
 ARG NODEJS_PORT_VUE
