--- a/.env.dist
+++ b/.env.dist
@@ -11,6 +11,7 @@ TIMEZONE=Asia/Tokyo
 CERTIFICATE_FILE=selfsign/Encrypted.crt
 CERTIFICATE_KEY=selfsign/Encrypted.key
 CERTIFICATE_CHAIN=selfsign/Encrypted.csr
+CERTIFICATE_PATH=/home/cimo/One_workspace/root/certificate
 DOMAIN=localhost
 NETWORK_DRIVER=bridge
 NETWORK_SUB=172.21.0.0/16
@@ -28,7 +29,7 @@ NODEJS_PORT_HTTP=1080
 NODEJS_PORT_HTTPS=1443
 NODEJS_PORT_VUE=10000
 NODEJS_PORT_RANGE=10001-10010
-NODEJS_DATA_PATH=D:\One_workspace\data\nodejs
+NODEJS_DATA_PATH=/home/cimo/One_workspace/data/nodejs
 NODEJS_NETWORK_IP=172.21.0.2
 
 APACHE_VERSION=2.4.46
@@ -51,20 +52,20 @@ MYSQL_ROOT_PASSWORD=Password1
 MYSQL_USER=user_1
 MYSQL_PASSWORD=Password1
 MYSQL_PORT=3306
-MYSQL_DATA_PATH=D:\One_workspace\data\mysql
+MYSQL_DATA_PATH=/home/cimo/One_workspace/data/mysql
 MYSQL_NETWORK_IP=172.21.0.5
 
 POSTGRES_VERSION=10.16
 POSTGRES_USER=root
 POSTGRES_PASSWORD=Password1
 POSTGRES_PORT=5432
-POSTGRES_DATA_PATH=D:\One_workspace\data\postgresql
+POSTGRES_DATA_PATH=/home/cimo/One_workspace/data/postgresql
 POSTGRES_NETWORK_IP=172.21.0.6
 
 REDIS_VERSION=6.2.1
 REDIS_PASSWORD=Password1
 REDIS_PORT=6379
-REDIS_DATA_PATH=D:\One_workspace\data\redis
+REDIS_DATA_PATH=/home/cimo/One_workspace/data/redis
 REDIS_NETWORK_IP=172.21.0.7
 
 MONGODB_VERSION=4.4.4
@@ -74,7 +75,7 @@ MONGODB_DATABASE=user_1
 MONGODB_USER=user_1
 MONGODB_PASSWORD=Password1
 MONGODB_PORT=27017
-MONGODB_DATA_PATH=D:\One_workspace\data\mongodb
+MONGODB_DATA_PATH=/home/cimo/One_workspace/data/mongodb
 MONGODB_NETWORK_IP=172.21.0.8
 
 PYTHON_VERSION=3.6.13
