--- a/docker/Dockerfile_python
+++ b/docker/Dockerfile_python
@@ -36,8 +36,7 @@ gettext \
 && ln -sf /usr/share/zoneinfo/${TIMEZONE} /etc/localtime \
 && dpkg-reconfigure -f noninteractive tzdata \
 # Pip
-&& curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py \
-&& python get-pip.py \
+&& python -m pip install pip==21.1 \
 # Clean
 && rm -rf /var/lib/apt/lists/* \
 && apt-get clean -y \
